--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile project (':crash_let')
+    compile 'com.github.Collabalist:RetroLet:1.5'
     testCompile 'junit:junit:4.12'
 }
